# harchaeo

./: LICENSE  Makefile  README.md  elm-package.json  harchaeo.cabal  stack.yaml
app/: Backend.hs  CodeGenerator.hs  Main.hs
frontend/src/: Main.elm
src/: Api.hs  Archive.hs  ElmCodeGenerator.hs  Lib.hs
src/Types/: Channel.hs  Message.hs  User.hs
