name:                harchaeo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/remusao/harchaeo#readme
license:             BSD3
license-file:        LICENSE
author:              Rémi
maintainer:          remi@cliqz.com
copyright:           GPLv3
category:            TODO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Api
                     , Types.Channel
                     , Types.Message
                     , Types.User
                     , Archive
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , servant
                     , aeson
                     , wai
                     , warp
                     , servant-server
                     , text
                     , bytestring
                     , containers
                     , directory
                     , filepath
  default-language:    Haskell2010

executable harchaeo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , harchaeo
  default-language:    Haskell2010

test-suite harchaeo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , harchaeo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/remusao/harchaeo
