name:                harchaeo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/remusao/harchaeo#readme
license:             BSD3
license-file:        LICENSE
author:              Rémi
maintainer:          remi@cliqz.com
copyright:           GPLv3
category:            TODO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Api
                     , ElmCodeGenerator
                     , Types.Channel
                     , Types.Message
                     , Types.User
  other-modules:       Archive
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , elm-export
                     , errors
                     , filepath
                     , random
                     , servant
                     , servant-elm
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
                     , zip-archive
  default-language:    Haskell2010

executable codegen
  hs-source-dirs:      app
  main-is:             CodeGenerator.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , harchaeo
  default-language:    Haskell2010

executable backend
  hs-source-dirs:      app
  main-is:             Backend.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , harchaeo
                     , optparse-generic
  default-language:    Haskell2010

test-suite harchaeo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , harchaeo
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/remusao/harchaeo
